# checklist-tester

./: .gitignore  .gitmodules  README.md
.github/workflows/: gradle.yml
connector/: README.md  build.gradle.kts  eng_fire.txt  settings.gradle.kts
connector/.fleet/: receipt.json
connector/composeApp/: build.gradle.kts
connector/composeApp/src/commonMain/composeResources/drawable/: check_box-24px.xml  expand_more-24px.xml  folder-24px.xml  history-24px.xml  link-24px.xml  link_off-24px.xml  rule-24px.xml  save-24px.xml
connector/composeApp/src/commonMain/resources/: checklist.vdmsl
connector/composeApp/src/desktopMain/kotlin/: About.kt  App.kt  InterfaceState.kt  Procedures.kt  Projects.kt  Settings.kt  SimulatorStatus.kt  SimulatorTest.kt  TestResults.kt  main.kt
connector/composeApp/src/desktopMain/kotlin/di/: CommonModule.kt  KoinInit.kt
connector/composeApp/src/desktopMain/kotlin/element/: SimulatorStatus.kt
connector/composeApp/src/desktopMain/kotlin/tab/: About.kt  LoadingScreen.kt  Procedures.kt  Settings.kt  SimulatorTest.kt  TestResults.kt
connector/composeApp/src/desktopMain/kotlin/tab/procedure/: Actions.kt  ActionsScreenModel.kt  CreateProcedure.kt  ListProcedures.kt  NoProcedures.kt  ProcedureScreenModel.kt  Procedures.kt  ProceduresContent.kt
connector/composeApp/src/desktopMain/kotlin/tab/project/: CreateProject.kt  ListProjects.kt  NoProjects.kt  Projects.kt  ProjectsContent.kt  ProjectsScreenModel.kt
connector/composeApp/src/desktopMain/kotlin/tab/test/: RunTest.kt  SimulatorTest.kt  TestContent.kt  TestResult.kt  TestRun.kt  TestScreenModel.kt
connector/composeApp/src/desktopMain/kotlin/theme/: Color.kt  Theme.kt
connector/composeApp/src/desktopTest/kotlin/di/: CheckKoinModulesTest.kt
connector/gradle/: libs.versions.toml
connector/gradle/wrapper/: gradle-wrapper.properties
connector/server/: build.gradle.kts
connector/server/src/main/kotlin/io/anthonyberg/connector/: Application.kt  VDMJ.kt
connector/server/src/main/kotlin/io/anthonyberg/connector/models/: VDMJExpression.kt
connector/server/src/main/kotlin/io/anthonyberg/connector/plugins/: Routing.kt  Serialization.kt
connector/server/src/main/kotlin/io/anthonyberg/connector/routes/: VDMJRoutes.kt
connector/server/src/main/kotlin/io/anthonyberg/connector/vdmj/: VDMJ.kt
connector/shared/: build.gradle.kts
connector/shared/src/commonMain/kotlin/: XPC.kt
connector/shared/src/commonMain/kotlin/io/anthonyberg/connector/shared/: ActionTransaction.kt  ProcedureTransaction.kt  ProjectTransaction.kt  TestTransaction.kt
connector/src/main/kotlin/: Main.kt  VDMJ.kt
connector/src/main/resources/: checklist.vdmsl
doc/: README.md
formal/: checklist.vdmsl
plugin/: CMakeLists.txt  main.cpp  vcpkg.json
plugin/src/plugin/: CMakeLists.txt  plugin.cpp
plugin/src/plugin/ui/: menu.cpp  menu.h  ui.cpp  ui.h  window.cpp  window.h
pub/: .gitignore  README.md
pub/dissertation/: dissertation.tex  references.bib
pub/dissertation/chapters/: background.tex  conclusion.tex  design.tex  introduction.tex  results.tex
pub/dissertation/chapters/appendix/: database.tex  formal.tex
pub/dissertation/code/: compose-modular.kt  sqldelight  vdmj-interact.kt
pub/proposal/: proposal.tex  references.bib
(+27 files in other folders)
